WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188546
[GTK] MiniBrowser: web view doesn't get the focus when new window is created
https://bugs.webkit.org/show_bug.cgi?id=188546
Summary
[GTK] MiniBrowser: web view doesn't get the focus when new window is created
Carlos Garcia Campos
Reported
2018-08-14 01:52:46 PDT
"User prompts that are spawned from beforeunload event handlers, are dismissed implicitly upon navigation or close window, regardless of the defined user prompt handler." I think this is causing timeouts in tests: imported/w3c/webdriver/tests/forward/forward.py::test_dismissed_beforeunload imported/w3c/webdriver/tests/close_window/close.py::test_close_browsing_context_with_dismissed_beforeunload_prompt imported/w3c/webdriver/tests/back/back.py::test_dismissed_beforeunload
Attachments
Patch
(5.03 KB, patch)
2018-08-14 06:12 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2018-08-14 06:06:41 PDT
This turned out to be a bug in MiniBrowser, it has nothing to do with WebDriver, nor with beforeunload. The problem is that the affected tests use a popup window, with an entry that is filled with send keys command. The send keys command is failing because in the new window the focus is not in the web view, it's in the toolbar, so key events are sent to the toolbar instead.
Carlos Garcia Campos
Comment 2
2018-08-14 06:12:13 PDT
Created
attachment 347069
[details]
Patch
Carlos Garcia Campos
Comment 3
2018-08-16 01:16:08 PDT
Committed
r234915
: <
https://trac.webkit.org/changeset/234915
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug